Fix an wrapping problem with the three buttons on the home page

--- a/src/ressources/scss/layout/header.scss
+++ b/src/ressources/scss/layout/header.scss
@@ -44,6 +44,5 @@
     @media (max-width: 1400px){
       width: 100%;
     }
-    margin-right: 1rem;
   }
 }
